...
        android:src="@color/colorImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textDetailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:textColor="@color/colorAccent"
...
        app:layout_constraintStart_toStartOf="@+id/textDetailTitle"
        app:layout_constraintTop_toBottomOf="@+id/textDetailTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/dateline" />

    <Button
        android:id="@+id/btnDetailStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_button"
...
