<resources>
    <string name="app_name">Amber Movie</string>

    <string name="desc_image_poster">Poster image</string>
    <string name="desc_image_backdrop">Movie image backdrop</string>
    <string name="desc_about">Made In Indonesia by Habib Mustofa\nLearn Android Jetpack Pro at Dicoding 😎</string>

    <string name="msg_confirm_close">Press again to close application</string>
    <string name="msg_play_trailer">Playing trailer…</string>

    <string name="text_heading_overview">Overview</string>
    <string name="text_heading_genres">Genres</string>

    <string name="title_tab_movie">Movie</string>
    <string name="title_tab_tvshow">Tv Show</string>
    <string name="title_nav_discover">Discover</string>
    <string name="title_nav_favorite">Favorite</string>
    <string name="title_nav_about">About</string>

    <string name="msg_failed_fetch_data">Failed to fetch data!</string>
    <string name="msg_something_wrong">Something went wrong!</string>
    <string name="msg_no_data">No data!</string>
    <string name="msg_not_found">No data found!</string>
    <string name="msg_added_favorite">Added to favorite</string>
    <string name="msg_removed_favorite">Removed from favorite</string>
    <string name="msg_failed_remove_favorite">Can\'t remove favorite!</string>
    <string name="msg_failed_add_favorite">Can\'t add favorite!</string>
</resources>
